--- a/index.html
+++ b/index.html
@@ -7,6 +7,51 @@
     <title>Signup Form</title>
 </head>
 <body>
-    
+    <div id="logoContainer">
+        <div id="logo">
+            <img src="./src/odin-lined.png" alt="Odin Icon" id="icon">
+        </div>
+        <h1 id="title">ODIN</h1>
+    </div>
+    <div id="formContainer">
+        <p id="mainText">This isnot a real online service! You know you need something like this in your life to help your deepest dreams. Sign up <em>now</em> to get started.</p>
+        <div id="secondText">You <em>know</em> you want to</div>
+        <form action="" method="get" id="form">
+            <legend>Let's do this!</legend>
+            <div id="input1">
+                <label for="firstNameInput">First Name</label>
+                <input type="text" id="firstNameInput">
+            </div>
+
+            <div id="input2">
+                <label for="lastNameInput">Last Name</label>
+                <input type="text" id="lastNameInput">
+            </div>
+
+            <div id="input3">
+                <label for="emailInput">Email</label>
+                <input type="email" id="emailInput">
+            </div>
+
+            <div id="input4">
+                <label for="numberInput">Phone Number</label>
+                <input type="tel" id="numberInput">
+            </div>
+
+            <div id="input5">
+                <label for="passwordInput">Password</label>
+                <input type="password" id="passwordInput">
+            </div>
+
+            <div id="input6">
+                <label for="passwordConfirmInput">Confirm Password</label>
+                <input type="password" id="passwordConfrimInput">
+            </div>
+
+            <button type="submit" id="submitBtn">Create Account</button>
+        </form>
+
+        <div id="account">Already have an account?<a>Log in</a></div>
+    </div>
 </body>
 </html>
