--- a/index.html
+++ b/index.html
@@ -4,49 +4,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <title>Signup Form</title>
 </head>
 <body>
     <div id="logoContainer">
         <div id="logo">
             <img src="./src/odin-lined.png" alt="Odin Icon" id="icon">
+            <h1 id="title">ODIN</h1>
         </div>
-        <h1 id="title">ODIN</h1>
     </div>
     <div id="formContainer">
-        <p id="mainText">This isnot a real online service! You know you need something like this in your life to help your deepest dreams. Sign up <em>now</em> to get started.</p>
+        <p id="mainText">This is not a real online service! You know you need something like this in your life to help your deepest dreams. Sign up <em>now</em> to get started.</p>
         <div id="secondText">You <em>know</em> you want to</div>
         <form action="" method="get" id="form">
-            <legend>Let's do this!</legend>
-            <div id="input1">
-                <label for="firstNameInput">First Name</label>
-                <input type="text" id="firstNameInput">
-            </div>
+            <div id="inputContainer">
+                <legend>Let's do this!</legend>
+                <div id="input1" class="inputContainer">
+                    <label for="firstNameInput">First Name</label>
+                    <input type="text" id="firstNameInput" required>
+                </div>
 
-            <div id="input2">
-                <label for="lastNameInput">Last Name</label>
-                <input type="text" id="lastNameInput">
-            </div>
+                <div id="input2" class="inputContainer">
+                    <label for="lastNameInput">Last Name</label>
+                    <input type="text" id="lastNameInput" required>
+                </div>
 
-            <div id="input3">
-                <label for="emailInput">Email</label>
-                <input type="email" id="emailInput">
-            </div>
+                <div id="input3" class="inputContainer">
+                    <label for="emailInput">Email</label>
+                    <input type="email" id="emailInput" required>
+                </div>
 
-            <div id="input4">
-                <label for="numberInput">Phone Number</label>
-                <input type="tel" id="numberInput">
-            </div>
+                <div id="input4" class="inputContainer">
+                    <label for="numberInput">Phone Number</label>
+                    <input type="tel" id="numberInput" required>
+                </div>
 
-            <div id="input5">
-                <label for="passwordInput">Password</label>
-                <input type="password" id="passwordInput">
-            </div>
+                <div id="input5" class="inputContainer">
+                    <label for="passwordInput">Password</label>
+                    <input type="password" id="passwordInput" required>
+                </div>
 
-            <div id="input6">
-                <label for="passwordConfirmInput">Confirm Password</label>
-                <input type="password" id="passwordConfrimInput">
+                <div id="input6" class="inputContainer">
+                    <label for="passwordConfirmInput">Confirm Password</label>
+                    <input type="password" id="passwordConfrimInput" required>
+                </div>
             </div>
+            
 
             <button type="submit" id="submitBtn">Create Account</button>
         </form>
